src/objects/Tools__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <inlineHelpText>Include additional information such as KB articles, references to the original documentation (e.g. Admin Guide or Installation Guide) or any other resource that helped in documenting this article.</inlineHelpText>
        <label>Additional Information</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>This specified the Approval Status.</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Submitted for Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Article_created_from_Case__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Article created from Case #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Group_Name__c</fullName>
        <formula>CASE( Product__c , 
&quot;Datometry Hyper-Q for Pivotal Data Suite&quot; , &quot;Greenplum&quot;, 
&quot;Datometry Workload Manager&quot; , &quot;Greenplum&quot;, 
&quot;MADlib&quot; , &quot;Greenplum&quot;, 
&quot;Alpine Chorus for Pivotal Data Suite&quot; , &quot;Greenplum&quot;, 
&quot;Pivotal Command Center&quot; , &quot;Greenplum&quot;, 
&quot;Pivotal Data Dispatch&quot; , &quot;Greenplum&quot;, 
&quot;Pivotal GPText&quot; , &quot;Greenplum&quot;, 
&quot;Pivotal Greenplum&quot; , &quot;Greenplum&quot;, 
&quot;Pivotal Greenplum Command Center&quot; , &quot;Greenplum&quot;, 
&quot;Pivotal GemFire&quot;,&quot;GemFire&quot;, 
&quot;Pivotal GemFire XD&quot;,&quot;GemFire&quot;, 
&quot;CSR&quot;,&quot;General CSR&quot;, 
&quot;Other&quot;,&quot;General CSR&quot;, 
&quot;Open Source Apache HTTP Server&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;, 
&quot;Open Source Apache Tomcat&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;, 
&quot;Open Source RabbitMQ&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;, 
&quot;Open Source Redis&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;, 
&quot;Pivotal Cloud Cache&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;, 
&quot;Pivotal Cloud Foundry Operations Manager&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;, 
&quot;Pivotal Cloud Foundry Operations Manager v2&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;, 
&quot;Pivotal Cloud Foundry Elastic Runtime Suite&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;, 
&quot;Pivotal RabbitMQ&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;, 
&quot;Pivotal tc Server&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;, 
&quot;Pivotal Tracker Enterprise SaaS&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;, 
&quot;Pivotal Tracker for Pivotal Cloud Foundry&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;, 
&quot;Pivotal Web Server&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;, 
&quot;Pivotal Web Services&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;, 
&quot;Spring IO&quot;,&quot;Pivotal Cloud Foundry Core and Services&quot;, 
&quot;Pivotal HD&quot;,&quot;Pivotal HD&quot;, 
&quot;Pivotal HDB&quot;,&quot;Pivotal HD&quot;, 
&quot;Pivotal HDP&quot;,&quot;Pivotal HD&quot;, 
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <inlineHelpText>Include additional details for why this tool is necessary for the users.</inlineHelpText>
        <label>Cause</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Component</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Results__c</fullName>
        <inlineHelpText>Describe the expected results after running the tool.</inlineHelpText>
        <label>Expected Results</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Zendesk_ID__c</fullName>
        <label>Legacy Zendesk ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Type notes for Pivotal Internal only</inlineHelpText>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <label>OS</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Options__c</fullName>
        <inlineHelpText>Describe the optional steps or codes to run</inlineHelpText>
        <label>Options</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Procedure__c</fullName>
        <inlineHelpText>Describe how to run the tool.</inlineHelpText>
        <label>Procedure</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <inlineHelpText>Introduce the tool to the users. Explain what is the scope and objective of running the tool.</inlineHelpText>
        <label>Purpose</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Related_KB_Article__c</fullName>
        <label>Related KB Article</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <inlineHelpText>Include the section that you would like your article to be published in</inlineHelpText>
        <label>Section</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Component__c</fullName>
        <label>Sub Component</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Component__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sub_Component</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tool_Attachments__c</fullName>
        <inlineHelpText>Add URLs for the shared documents.</inlineHelpText>
        <label>Tool Attachments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Version_History__c</fullName>
        <label>Version History</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Version</valueSetName>
        </valueSet>
    </fields>
    <label>Tools</label>
    <pluralLabel>Tool</pluralLabel>
    <validationRules>
        <fullName>Fields_are_required</fullName>
        <active>true</active>
        <errorConditionFormula>OR((LEN(Procedure__c)=0), (LEN(Purpose__c)=0),(Text(Product__c) ==&apos;None&apos;),  (LEN(Expected_Results__c)=0) )</errorConditionFormula>
        <errorMessage>Expected Results , Procedure, Purpose and Product are required.</errorMessage>
    </validationRules>
</CustomObject>